--- a/views/main.tmpl
+++ b/views/main.tmpl
@@ -3,18 +3,7 @@
 
 
 #def maincol()
+     <h2>Our Mission:</h2>
+	<p>The 100 Beds for Haiti Campaign will work to finance the purchase and transportation of 100 hospital beds to Sacre Coeur Hospital in Cap Haitien, the largest private hospital serving the health needs of the XX million people living in the northern province.</p>
 
-<h2>Who we are</h2>
-<p>
-The <b>100 Beds for Haiti Campaign</b>, in partnership with Sacre Coeur Hospital in Cap Haitien, Haiti and the <b>Center for the Rural Development of Milot</b> (CRUDEM) is made up of concerned citizens, students, and professionals dedicated to saving lives by improving health services in Haiti.  In the wake of the earthquake in January 2010, the 100 Beds for Haiti Campaign was founded to raise the necessary funds to finance and deliver hospital beds to s largest functioning private hospital, Sacre Coeur Hospital, in the northern port-city of Cap Haitien.
-</p>
-<h2>Why 100 Beds</h2>
-<p>
-In the wake of the devastating earthquake that struck the capital city of Port-au-Prince, hundreds of thousands of Haitians have been displaced and are currently migrating to less affected areas of Haiti. Cap Haitian is Haiti's second largest city and remained relatively unscathed due to its location in the north of the country. <span class="highlight">In the next month, an estimated 100,000 people will resettle here putting the hospitals under more greater pressures</span> to serve the rapidly increasing population.
-</p>
-
-<h2>How this works</h2>
-<p>
-Harnessing the generosity, goodwill, human capital, and vibrant artistic cultural and musical scene of New York City, <span class="highlight">the 100 Beds for Haiti Campaign will organize and host multiple parties and live concerts with some of New York's most notable musicians, artists, and business owners in different venues to raise the \$XX necessary to purchase 100 beds and transport them</span> to the Sacre Coeur Hospital in Cap Haitien, Haiti.  Through grassroots mobilization, city-wide marketing campaigns,  social networking, and media and blog support, the 100 Beds for Haiti Campaign will raise the funds to deliver 100 hospital beds to Haiti by May 1st, 2010.
-</p>
 #end def
