--- a/views/help.tmpl
+++ b/views/help.tmpl
@@ -3,12 +3,50 @@
 #def maincol()
 	    <h2>Donate</h2>
 	    <p>The easiest and quickest way to help is by donating at any level below.</p>
+	    <p>We are raising $300,000 to finance the purchase, transportation, and delivery of 100 medical hospital beds to the H&ocirc;pital Sacr&eacute; Coeur. Every donation helps us reach this critical goal. 100% of donations will be delivered directlyt to our partners in Haiti, the CRUDEM foundation for the H&ocirc;pital Sacr&eacute; Coeur.
+	      <center>
+	    <table>
+	      <thead></thead>
+	      <tbody>
+		<tr>
+		  <td align="center">$500</td>
+		  <td align="center">$250</td>
+		  <td align="center">$100</td>
+		  <td align="center">$50</td>
+		  <td align="center">$10</td>
+		  <td align="center">other</td>
+		</tr>
+		<tr>
+		  <td>$pp_button(500)</td>
+		  <td>$pp_button(250)</td>
+		  <td>$pp_button(100)</td>
+		  <td>$pp_button(50)</td>
+		  <td>$pp_button(10)</td>
+		  <td>$pp_button()</td>
+		</tr>
+	      </tbody>
+	    </table>
+	    </center>
+	    <h2>Events</h2>
+	    Join us at <a href="/events">our fine events</a> across the city!
+
+	    <h2>Talk to us</h2>
+	    <p>Got ideas? We want to hear them. <a href="/contact">Please contact us!</a></p>
+
 	    <h2>Volunteer or Partner with us</h2>
-	    <p>Show support at 100beds social events or donate your talents.</p>
+	    <p>We need help! Event planning, logistics, and coordinating skills are welcome. Please let us know if you are interested in supporting this campaign by partnering with us. <a href="/contact">Click here to work with us.</a></p>
 	    <form action="/help/signup" method="post">
 	        <input type="text" name="name" value="Your Name"/>
 	    	<input type="text" name="email" value="Your Email"/>
 	    	<textarea name="comment">How would you like to get involved</textarea>
 	    	<input type="submit"/>
 	    </form>
+
+	    <h2>Stay Connected</h2>
+	    Stay connected to our campaign as we progress. Sign up to join our list-serv:
+	    <form action="/help/signup" method="post">
+	        <input type="text" name="name" value="Your Name"/>
+	    	<input type="text" name="email" value="Your Email"/>
+	    	<input type="submit"/>
+	    </form>	    
 #end def
