--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -16,7 +16,7 @@
 
 #def right_col()
 <div>pictures</div>
-<div>twitter</div>
+<div id="#tweet"></div>
 <div>become a fan</div>
 $pp_button(0, True)
 #end def
@@ -26,7 +26,15 @@ $pp_button(0, True)
   #if $iname == "main"
      #set $ipath = "/"
   #end if
-  <li class="$is_selected($iname)"><a href="$ipath">$idesc</a></li>
+  <li class="$is_selected($iname)">
+    <div class="menu_item">
+      <div class="right_menu_item"></div>
+      <div class="mid_menu_item">
+	<a href="$ipath">$idesc</a>
+      </div>
+      <div class="left_menu_item"></div>
+    </div>
+  </li>
 #end def
 
 #def pp_button($amount=0, $cc_logo=False)
@@ -55,6 +63,7 @@ $pp_button(0, True)
     <link rel="stylesheet" type="text/css" href="/css/100beds.css" />
     <meta http-equiv="keywords" content="Haiti, humanitarian aid, fundraiser, hospitals, earthquake in haiti, help">
     <meta http-equiv="description" content="Help us bring 100 beds to Hopital Sacre Coeur in Haiti.">
+    <script language="javascript" src="/js/jquery-1.3.2.js" type="text/javascript"></script>
 
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -78,14 +87,18 @@ $pp_button(0, True)
 	</div>
 	<div id="wrapper" class="clearfix" > 
 	  <div id="leftcol">
-	    <div id="sitemenu">
+	    <div class="sidemenu" id="sitemenu">
 	      <ul>
 		$menu_item('main','HOME')
 		$menu_item('about','ABOUT')
 		$menu_item('partners','PARTNERS')
 		$menu_item('events','EVENTS')
 		$menu_item('help','GET INVOLVED')
-		$menu_item('contact','CONTACT US')
+	      </ul>
+	    </div>
+	    <div class="sidemenu" id="submenu">
+	      <ul>
+		$menu_item('pictures','Pictures')
 	      </ul>
 	    </div>
 	  </div>
