--- a/views/help.tmpl
+++ b/views/help.tmpl
@@ -5,28 +5,8 @@
 	    <p>The easiest and quickest way to help is by donating at any level below.</p>
 	    <p>We are raising $300,000 to finance the purchase, transportation, and delivery of 100 medical hospital beds to the H&ocirc;pital Sacr&eacute; Coeur. Every donation helps us reach this critical goal. 100% of donations will be delivered directlyt to our partners in Haiti, the CRUDEM foundation for the H&ocirc;pital Sacr&eacute; Coeur.
 	      <center>
-	    <table>
-	      <thead></thead>
-	      <tbody>
-		<tr>
-		  <td align="center">$500</td>
-		  <td align="center">$250</td>
-		  <td align="center">$100</td>
-		  <td align="center">$50</td>
-		  <td align="center">$10</td>
-		  <td align="center">other</td>
-		</tr>
-		<tr>
-		  <td>$pp_button(500)</td>
-		  <td>$pp_button(250)</td>
-		  <td>$pp_button(100)</td>
-		  <td>$pp_button(50)</td>
-		  <td>$pp_button(10)</td>
-		  <td>$pp_button()</td>
-		</tr>
-	      </tbody>
-	    </table>
-	    </center>
+		$donation_buttons()
+	      </center>
 
 	    <h2>Talk to us</h2>
 	    <p>Got ideas? We want to hear them. Want to volunteer, help out, or partner up? Let's talk!</p>
