--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -1,3 +1,28 @@
+
+#def donation_buttons()
+<table>
+  <thead></thead>
+  <tbody>
+    <tr>
+      <td align="center">$500</td>
+      <td align="center">$250</td>
+      <td align="center">$100</td>
+      <td align="center">$50</td>
+      <td align="center">$10</td>
+      <td align="center">other</td>
+    </tr>
+    <tr>
+      <td>$pp_button(500)</td>
+      <td>$pp_button(250)</td>
+      <td>$pp_button(100)</td>
+      <td>$pp_button(50)</td>
+      <td>$pp_button(10)</td>
+      <td>$pp_button()</td>
+    </tr>
+  </tbody>
+</table>
+#end def
+
 #def is_selected($item_name)
    #if $_cname == $item_name 
      #return 'selected'
@@ -15,10 +40,6 @@
 #end def
 
 #def right_col()
-<div>pictures</div>
-<div id="#tweet"></div>
-<div>become a fan</div>
-$pp_button(0, True)
 #end def
 
 #def menu_item($iname, $idesc)
@@ -26,15 +47,13 @@ $pp_button(0, True)
   #if $iname == "main"
      #set $ipath = "/"
   #end if
-  <li class="$is_selected($iname)">
-    <div class="menu_item">
+    <div class="menu_item $is_selected($iname)">
       <div class="right_menu_item"></div>
       <div class="mid_menu_item">
 	<a href="$ipath">$idesc</a>
       </div>
       <div class="left_menu_item"></div>
     </div>
-  </li>
 #end def
 
 #def pp_button($amount=0, $cc_logo=False)
@@ -64,7 +83,7 @@ $pp_button(0, True)
     <meta http-equiv="keywords" content="Haiti, humanitarian aid, fundraiser, hospitals, earthquake in haiti, help">
     <meta http-equiv="description" content="Help us bring 100 beds to Hopital Sacre Coeur in Haiti.">
     <script language="javascript" src="/js/jquery-1.3.2.js" type="text/javascript"></script>
-
+    <script src="http://widgets.twimg.com/j/2/widget.js"></script>
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -87,24 +106,26 @@ $pp_button(0, True)
 	</div>
 	<div id="wrapper" class="clearfix" > 
 	  <div id="leftcol">
-	    <div class="sidemenu" id="sitemenu">
-	      <ul>
-		$menu_item('main','HOME')
-		$menu_item('about','ABOUT')
-		$menu_item('partners','PARTNERS')
-		$menu_item('events','EVENTS')
-		$menu_item('help','GET INVOLVED')
-	      </ul>
-	    </div>
-	    <div class="sidemenu" id="submenu">
-	      <ul>
-		$menu_item('pictures','Pictures')
-	      </ul>
-	    </div>
+	    <div id="sidemenu">
+	      <div id="sitemenu">
+		  $menu_item('main','HOME')
+		  $menu_item('about','ABOUT')
+		  $menu_item('partners','PARTNERS')
+		  $menu_item('events','EVENTS')
+		  $menu_item('help','GET INVOLVED')
+	      </div>
+	      <br class="clear" />
+	      <div class="sidemenu" id="submenu">
+		  $menu_item('pictures','Pictures')
+	      </div>
+	      <br class="clear" />
+	    </div><!-- #sidemenu -->
 	  </div>
 	  <div id="twocols" class="clearfix"> 
 	    <div id="maincol">
-	      $maincol()
+	      <div id="body">
+		$maincol()
+	      </div>
 	    </div>
 	    <div id="rightcol">
 	      $right_col()
@@ -117,3 +138,4 @@ $pp_button(0, True)
     </div><!-- #pagebacking -->
   </body>
 </html>
+
