--- a/views/main.tmpl
+++ b/views/main.tmpl
@@ -1,9 +1,56 @@
 #extends base
 #set $page_name = 'main'
 
-
 #def maincol()
-     <h2>Our Mission:</h2>
-	<p>The 100 Beds for Haiti Campaign will work to finance the purchase and transportation of 100 hospital beds to Sacre Coeur Hospital in Cap Haitien, the largest private hospital serving the health needs of the XX million people living in the northern province.</p>
+<h2>Our Mission:</h2>
+<p>The 100 Beds for Haiti Campaign will work to finance the purchase and transportation of 100 hospital beds to Sacre Coeur Hospital in Cap Haitien, the largest private hospital serving the health needs of the XX million people living in the northern province.</p>
 
+<h3>The situation</h2>
+We should give a brief, brief rundown of why this is urgent (people are traveling north) to build up interest and lead into the next point, where we describe the hospital and organization
+<center>$donation_buttons()</center>
+
+<h2>Who we are</h2>
+<h3>H&ocirc;pital Sacr&eacute; Coeur and CRUDEM</h3>
+<div class="right">
+<object width="400" height="300"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="300"></embed></object><p><a href="http://vimeo.com/5324039">H&ocirc;pital Sacr&eacute; Coeur</a> from <a href="http://vimeo.com/user1951858">Crudem Foundation</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+</div>
+<p><b>H&ocirc;pital Sacr&eacute; Coeur (HSC)</b> is the largest private hospital in North Haiti. Located in Milot, outside the town of Cap-Haitien, the 73 bed hospital has provide service for 23 years. The Red Cross has called HSC the best hospital in the country. The <b>CRUDEM (Center for the Rural Development of Milot)</b> Foundation is a multifaceted mission dedicated to helping impoverished people in and around the village of Milot in Haiti, the poorest country in the Western Hemisphere. As a 501C3 registered non-profit organization based in the United States, all donations are tax-deductable. Please see the s IRS letter of determination, audited financial statements and Tax ID number here: <a href="http://www.crudem.org/give/tax-info">http://www.crudem.org/give/tax-info</a>.</p>
+
+<h3>100 Beds for Haiti</h3>
+We are a group of students and professionals from NYC who seek to leverage the creative spirit and heart of NYC to help ... (please fill in moar copy) 
+
+#end def
+
+#def right_col()
+<script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'profile',
+  rpp: 4,
+  interval: 6000,
+  width: 250,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#333333',
+      color: '#ffffff'
+    },
+    tweets: {
+      background: '#000000',
+      color: '#ffffff',
+      links: '#4aed05'
+    }
+  },
+  features: {
+    scrollbar: false,
+    loop: false,
+    live: false,
+    hashtags: true,
+    timestamp: true,
+    avatars: false,
+    behavior: 'all'
+  }
+}).render().setUser('100beds4Haiti').start();
+</script>
 #end def
