Updated entire friggin' site

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -3,19 +3,29 @@
 
 
 #def maincol()
+  <div id="page-wrap">
+    <div id="right-text">
+      <p>
+	<h3>Why 100 beds?</h3>  
+	Long-term recovery requires long-term solutions. The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; Coeur has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries, and additional medical conditions will result from lack of durable beds. Also, H&ocirc;pital Sacr&eacute; Coeur must expand to meet the needs of an increasing population. By sending more quality beds, nurses and doctors can ensure that patient recovery happens faster and meet the populations' needs.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti&#8217;s overall long-term recovery. 
+      </p>	
 
-<h2>What is the campaign?</h2>
-<p>
-The <b>100 Beds for Haiti Campaign</b>, in partnership with <a href="http://www.crudem.org/">H&ocirc;pital Sacr&eacute; Coeur in northern Haiti and the <b>Center for the Rural Development of Milot</b></a> (CRUDEM), is made up of concerned citizens, students, and professionals dedicated to saving lives by improving health services in Haiti. In the wake of Haiti's earthquake disaster in January 2010, the <b>100 Beds for Haiti Campaign</b> was mobilized to raise the necessary funds to finance and deliver hospital beds to Haiti's largest functioning private hospital, H&ocirc;pital Sacr&eacute; Coeur, in the town of Milot, near the northern port-city of Cap Haitien.
-</p>
+      
+    </div> 
+    <div id="left">	
+      <h1>about 100 beds</h1>
+      
+      <h3>What is the campaign?</h3>
+      
 
-<h2>Why 100 Beds?</h2>
-<p>
-In the wake of the devastating earthquake that struck Haiti's capital city of Port-au-Prince on January 12, 2010, hundreds of thousands of Haitians have been displaced and are migrating to areas of Haiti less affected by the initial destruction. As Haiti's second largest city, located on the north coast, Cap Haitian's infrastructure escaped the earthquake relatively unscathed, prompting many Haitians to flee their destroyed homes in the capital to the historic port-city and unofficial second capital. <span class='highlight'>In the next month, an estimated 100,000 people will resettle here putting the hospitals under greater pressure to serve the rapidly increasing population.</span> As the premier Haitian healthcare facility and largest referral hospital in the country, H&ocirc;pital Sacr&eacute; Coeur has many patients still assigned to cots and stretchers for lack of hospital beds. With a policy to serve any and all in need of care, <span class="highlight">H&ocirc;pital Sacr&eacute; Coeur must expand to meet these needs and create a healthier Haiti</span>. Furthermore, as Haiti rebuilds, there will be a continuous need for an increase in infrastructural support including supplies and materials for hospitals and health services.  The <b>100 Beds for Haiti Campaign</b> will meet an immediate need while supporting sustainable, long-term recovery and development.
-</p>
+      The 100 Beds for Haiti Campaign is made up of creative and passionate citizens, students, and professionals dedicated to improving health services in Haiti. 
+      <br />
+      <br />
+      Hundreds of thousands of displaced Haitians have relocated to Northern Haiti to escape the physical devastation of the January earthquake.  As Haiti&#8217;s largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) currently has 73 permanent inpatient beds and the need for more quality hospital beds is overwhelming.   In partnership with HSC and the Center for the Rural Development of Milot (CRUDEM), we aim to raise $300,000 to purchase and deliver 100 hospital beds to meet this immediate need and support the sustainable, long-term recovery and development of Haiti.
+      <br />
+      <br />
 
-<h2>How does this work?</h2>
-<p>
-Harnessing the generosity, goodwill, human capital, and vibrant artistic scene of New York City, the <b>100 Beds for Haiti Campaign</b> will organize and host multiple parties, concerts, and events with some of New York's most notable musicians, artists, and business owners to raise the $300,000 necessary to purchase 100 beds and transport them to the H&ocirc;pital Sacr&eacute; Coeur in Haiti.  Through grassroots mobilization, city-wide marketing campaigns, word of mouth, social networking, and media and blog support, the <b>100 Beds for Haiti Campaign</b> will raise the funds in New York City through our friends and supporters across the country and world to support our benchmark goal of delivering 100 hospital beds to Haiti by June 1, 2010.
-</p>
+    </div>
+    
+  </div>
 #end def
