--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -1,64 +1,93 @@
-<html>
-  <head>
-    <title>100 Beds for Haiti</title>
-    <link rel="stylesheet" type="text/css" href="/css/100beds.css" />
-    <meta http-equiv="keywords" content="Haiti, humanitarian aid, fundraiser, hospitals, earthquake in haiti, help">
-    <meta http-equiv="description" content="Help us bring 100 beds to Hopital Sacre Coeur in Haiti.">
-    <script language="javascript" src="/js/jquery-1.3.2.js" type="text/javascript"></script>
-    <script src="http://widgets.twimg.com/j/2/widget.js"></script>
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-      var pageTracker = _gat._getTracker("UA-12751934-1");
-      pageTracker._setDomainName(".100bedsforhaiti.com");
-      pageTracker._trackPageview();
-      } catch(err) {}
-    </script>
-    $head()
-  </head>
-  <body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-    <div id="pagebacking">
-      <div id="pagewidth" >
-	<div id="header" >
-	  <img src="/images/100beds.png" alt="100 Beds for Haiti"/>
-	</div>
-	<div id="wrapper" class="clearfix" > 
-	  <div id="leftcol">
-	    <div id="sidemenu">
-	      <div id="sitemenu">
-		  $menu_item('main','HOME')
-		  $menu_item('about','ABOUT')
-		  $menu_item('partners','PARTNERS')
-		  $menu_item('events','EVENTS')
-		  $menu_item('help','GET INVOLVED')
-	      </div>
-	      <br class="clear" />
-	      <div class="sidemenu" id="submenu">
-		  $menu_item('pictures','Pictures')
-	      </div>
-	      <br class="clear" />
-	    </div><!-- #sidemenu -->
-	  </div>
-	  <div id="twocols" class="clearfix"> 
-	    <div id="maincol">
-	      <div id="body">
-		$maincol()
-	      </div>
-	    </div>
-	    <div id="rightcol">
-	      $right_col()
-	    </div>
-	  </div>
-	</div>
-	<div id="footer" > 
-	</div>
-      </div><!-- #pagewidth -->
-    </div><!-- #pagebacking -->
+  <head>
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+    
+    <title>100 beds for Haiti</title>
+    
+    <link rel='stylesheet' type='text/css' href='/css/style.css' />
+    <link rel="stylesheet" href="/css/vlightbox.css" type="text/css" />
+    <style type="text/css">#vlightbox a#vlb{display:none}</style>
+    <link rel="stylesheet" href="/css/visuallightbox.css" type="text/css" media="screen" />
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type='text/javascript' src='/js/jquery.color-RGBa-patch.js'></script>
+    <script type='text/javascript' src='/js/example.js'></script>
+
+    
+
+    
+  </head>
+
+  <body>
+    <div id="head">
+      <a href="/"><img src="/images/haitilogo.jpg"</a> 
+				</div>
+
+    <div id="lead">
+      In Haiti's Sacr&eacute; Coeur Hospital, hundreds of sick patients will spend tonight sleeping on cots, floors and benches.
+      <br /> Something as simple as a hospital bed can improve the outcome for the sick dramatically.  
+      <br />The 100 Beds for Haiti Campaign needs your help to purchase and deliver 100 hospital beds. 
+      <br />Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. 
+
+    </div>
+    <div>
+      <div class="nav-wrap">
+	<ul class="group" id="example-one">
+	  <li class="current_page_item"><a href="/">home</a></li>
+	  <li><a href="/about">about</a></li>
+	  <li><a href="/partners">100 bed partners</a></li>
+	  <li><a href="/how">how we work</a></li>
+	  <li><a href="/getinvolved">get involved</a></li>
+	  <li><a href="/donate">donate now</a></li>
+	  
+	</ul>
+ 	
+      </div>
+    </div>
+    
+    <div id="sidebar">
+      <object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><p><a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a> </p>
+      <!-- Start VisualLightBox.com BODY section -->
+      <div id="vlightbox">
+	<a class="vlightbox" href="/data/images/3723768885_48a6afe0e1_o.jpg" title="3723768885_48a6afe0e1_o"><img src="/data/thumbnails/3723768885_48a6afe0e1_o.jpg" alt="3723768885_48a6afe0e1_o"/></a>
+	<a class="vlightbox" href="/data/images/3723774489_59b2d88934_o.jpg" title="3723774489_59b2d88934_o"><img src="/data/thumbnails/3723774489_59b2d88934_o.jpg" alt="3723774489_59b2d88934_o"/></a>
+	<a class="vlightbox" href="/data/images/3729739160_26349fc774_o.jpg" title="3729739160_26349fc774_o"><img src="/data/thumbnails/3729739160_26349fc774_o.jpg" alt="3729739160_26349fc774_o"/></a>
+	<a class="vlightbox" href="/data/images/haiti_hospital.jpg" title="haiti hospital"><img src="/data/thumbnails/haiti_hospital.jpg" alt="haiti hospital"/></a>
+	<a class="vlightbox" href="/data/images/haiti_hospital_1.jpg" title="haiti hospital 1"><img src="/data/thumbnails/haiti_hospital_1.jpg" alt="haiti hospital 1"/></a>
+	<a class="vlightbox" href="/data/images/haiti_hospital_2.jpg" title="haiti hospital 2"><img src="/data/thumbnails/haiti_hospital_2.jpg" alt="haiti hospital 2"/></a>
+	<a class="vlightbox" href="/data/images/022.jpg" title="022"><img src="/data/thumbnails/022.jpg" alt="022"/></a>
+	<a class="vlightbox" href="/data/images/028.jpg" title="028"><img src="/data/thumbnails/028.jpg" alt="028"/></a>
+	<a class="vlightbox" href="/data/images/3723770971_6978d3f4e1_o.jpg" title="3723770971_6978d3f4e1_o"><img src="/data/thumbnails/3723770971_6978d3f4e1_o.jpg" alt="3723770971_6978d3f4e1_o"/></a><script src="/js/visuallightbox.js" type="text/javascript"></script>
+      </div>
+      <!-- End VisualLightBox.com BODY section -->
+      <br />	
+      <div id="social">
+	<a href="http://twitter.com/crudem_haiti" target="_blank"><img src="images/twitter.png" /></a>
+	<a href="http://www.facebook.com/CRUDEMHaiti" target="_blank"><img src="images/facebook.png" /></a>
+	<a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
+	
+      </div>			
+      
+    </div>
+
+    $maincol()
+
+    <script type="text/javascript">
+      \$(document).ready(function(){
+      \$.getJSON('http://www.twitter.com/status/user_timeline/100beds4Haiti.json?count=10&callback=?',
+      function(data){
+      var tweets = '';
+      console.log(data);
+      \$.each(data, function(index, item){
+      tweets += '<div id="tweet"><p>' + item.text + '</p></div>'
+      });
+      \$('#twitter').append(tweets);
+      });
+      });
+    </script>			
   </body>
+
 </html>
 
 #def donation_buttons()
